--- a/Nvision/packages.config
+++ b/Nvision/packages.config
@@ -4,6 +4,23 @@
   <package id="Fody" version="6.9.1" targetFramework="net472" developmentDependency="true" />
   <package id="HidSharp" version="2.1.0" targetFramework="net472" />
   <package id="LibreHardwareMonitorLib" version="0.9.4" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.Diagnostics.NETCore.Client" version="0.2.410101" targetFramework="net472" />
+  <package id="Microsoft.Diagnostics.Runtime" version="3.1.512801" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.CodeDom" version="9.0.2" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net472" />
   <package id="System.Management" version="9.0.2" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
 </packages>
