Changed up the color scheme. Moved some things around.

--- a/Nvision/Nvision.csproj
+++ b/Nvision/Nvision.csproj
@@ -192,6 +192,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\NvisionPurple.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\NvisionPurple.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
